# lilac_built

./: .coveragerc  .dockerignore  .env  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .prettierrc.json  .style.yapf  Dockerfile  README.md  build_docker.sh  build_server_prod.sh  cloudbuild.yml  demo.yml  development.md  docker_start.py  docker_start.sh  lilac.yml  lilac_hf_space.yml  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  run_server_dev.sh  run_server_pdb.sh  run_server_prod.sh  tsconfig.json
.github/: labeler.yml
.github/workflows/: python.yml  typescript.yml
datasets/: the_movies_dataset.json
docs/: .firebaserc  .gitignore  Makefile  README.md  build_docs.sh  conf.py  firebase.json  index.rst  privacy.md  pyproject.toml  setup.sh  welcome.md
docs/_static/: custom.js
docs/_static/styles/: custom.css
docs/_templates/: base.html
docs/api_reference/: concepts.rst  data.rst  index.rst  signals.rst  sources.rst
docs/blog/: better-curate.md  curate-coding-dataset.md  introducing-lilac.md  shedding-light-on-datasets.md
docs/concepts/: concept_create.md  concept_metrics.md  concept_technical.md  concept_tuning.md  concept_use.md  concepts.md
docs/datasets/: dataset_concepts.md  dataset_configure.md  dataset_edit.md  dataset_explore.md  dataset_export.md  dataset_iterate.md  dataset_labels.md  dataset_load.md  dataset_query.md  dataset_signals.md
docs/deployment/: self_hosted.md
docs/embeddings/: embeddings.md
docs/environment/: variables.md
docs/getting_started/: installation.md  quickstart.md  quickstart_python.md
docs/huggingface/: huggingface_spaces.md
docs/projects/: projects.md
docs/signals/: signals.md  signals_create.md
lilac/: __init__.py  auth.py  batch_utils.py  batch_utils_test.py  cli.py  config.py  conftest.py  data_loader.py  data_loader_test.py  db_manager.py  deploy.py  env.py  hf_docker_start.py  load.py  load_dataset.py  load_dataset_test.py  load_test.py  make_openapi.py  parquet_writer.py  project.py  project_test.py  router_concept.py  router_data_loader.py  router_dataset.py  router_dataset_signals.py  router_google_login.py  router_rag.py  router_signal.py  router_tasks.py  router_utils.py  schema.py  schema_duckdb.py  schema_test.py  server.py  server_concept_test.py  server_dataset_signals_test.py  server_dataset_test.py  server_signal_test.py  server_test.py  signal.py  (+7 more)
lilac/concepts/: __init__.py  concept.py  concept_test.py  db_concept.py  db_concept_test.py
lilac/data/: __init__.py  dataset.py  dataset_compute_signal_chain_test.py  dataset_compute_signal_test.py  dataset_config_test.py  dataset_duckdb.py  dataset_export_test.py  dataset_format.py  dataset_format_test.py  dataset_labels_test.py  dataset_map_test.py  dataset_project_test.py  dataset_select_groups_test.py  dataset_select_rows_filter_test.py  dataset_select_rows_schema_test.py  dataset_select_rows_search_test.py  dataset_select_rows_sort_test.py  dataset_select_rows_udf_test.py  dataset_settings_test.py  dataset_stats_test.py  dataset_test.py  dataset_test_utils.py  dataset_utils.py  dataset_utils_test.py  duckdb_utils.py
lilac/embeddings/: __init__.py  cohere.py  embedding.py  embedding_test.py  gte.py  openai.py  palm.py  sbert.py  transformer_utils.py  vector_store.py  vector_store_hnsw.py  vector_store_numpy.py  vector_store_test.py
lilac/hf_docker/: Dockerfile  LICENSE  docker_start.sh
lilac/rag/: __init__.py  rag.py
lilac/signals/: __init__.py  cluster_dbscan.py  cluster_dbscan_test.py  cluster_hdbscan.py  cluster_hdbscan_test.py  concept_labels.py  concept_labels_test.py  concept_scorer.py  concept_scorer_test.py  default_signals.py  filter_mask.py  lang_detection.py  lang_detection_test.py  minhash_dup.py  near_dup.py  ner.py  ner_test.py  pii.py  pii_ip_address.py  pii_presidio.py  pii_secrets.py  pii_test.py  semantic_similarity.py  semantic_similarity_test.py  signal.py  signal_test.py  substring_search.py  substring_search_test.py  text_statistics.py  text_statistics_test.py
lilac/sources/: __init__.py  csv_source.py  csv_source_test.py  default_sources.py  dict_source.py  dict_source_test.py  duckdb_utils.py  github_source.py  gmail_source.py  huggingface_source.py  huggingface_source_test.py  json_source.py  json_source_test.py  langsmith.py  llama_index_docs_source.py  llama_index_docs_source_test.py  pandas_source.py  pandas_source_test.py  parquet_source.py  parquet_source_test.py  reddit_hf_source.py  source.py  source_registry.py  source_registry_test.py  sqlite_source.py  sqlite_source_test.py
lilac/splitters/: __init__.py  chunk_splitter.py  chunk_splitter_test.py  spacy_splitter.py  spacy_splitter_test.py  text_splitter_spacy.py  text_splitter_spacy_test.py  text_splitter_test_utils.py  text_splitter_test_utils_test.py
lilac/web/: rag.html
lilac_deployer/: README.md  app.py  poetry.toml  pyproject.toml
notebooks/: API.ipynb  BetterWayToCurate.ipynb  CurateCodingDataset.ipynb  DatasetMap.ipynb  DeployToHuggingFace.ipynb  LlamaIndexLoader.ipynb  MigrateEmbedding.ipynb  Rag.ipynb  Sentiment.ipynb  Toxicity.ipynb
notebooks/unmaintained/: chunking_cases.csv  chunking_experiments.ipynb  (+1 more)
scripts/: build_docs.sh  build_server_prod.sh  checks.sh  coverage_py.sh  deploy_demo.py  deploy_hf.py  deploy_lilac_deployer.py  deploy_staging.py  deploy_website.py  deploy_website.sh  fix.sh  fix_py.sh  fix_ts.sh  lint.sh  lint_py.sh  lint_ts.sh  list_py_deps_by_size.sh  make_fastapi_client.py  publish_pip.sh  setup.sh  setup_py.sh  setup_ts.sh  test.sh  test_py.sh  test_ts.sh  watch_docs.sh
src/: auth.py  config.py  conftest.py  constants.py  data_loader.py  data_loader_test.py  db_deprecated.py  db_manager.py  make_openapi.py  parquet_writer.py  router_concept.py  router_data_loader.py  router_dataset.py  router_embedding.py  router_google_login.py  router_signal.py  router_tasks.py  router_utils.py  schema.py  schema_test.py  server.py  server_api.py  server_concept_test.py  server_dataset_test.py  server_test.py  tasks.py  tasks_test.py  test_utils.py  utils.py
(+793 files in other folders)
