[tool.poetry]
name = "lilac-docs"
version = "0.0.0"
authors = ["Lilac AI Inc. <info@lilacml.com>"]
description = "Documentation for Lilac"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
autodoc-pydantic = "^2.0.1"
sphinx = "^7.2.0"
furo = "^2023.9.10"
lilac = { path = "..", develop = true }
sphinx-autobuild = "^2021.3.14"
myst-parser = "^2.0.0"
enum-tools = { extras = ["sphinx"], version = "^0.11.0" }
